--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,15 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+/* targets body element */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #3a3a3a;
+}
 /* header */
 header {
     background-color: lightcoral;
@@ -11,6 +20,8 @@ header {
 /* main content */
 main {
     background-color: lightblue;
+    /* makes main element take up enough space to force footer to bottom of website*/
+    flex: 1 0 auto;
 }
 /* footer */
 footer {
