--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,9 +23,17 @@ header {
     width: 100%;
     box-shadow: 0 2px ;
 }
-
+/* the a tags inside the header */
+header a {
+    text-decoration: none;
+    color: inherit;
+}
+/* h1 tag */
 h1 {
     font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
 }
 /* main content */
 main {
