--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,21 @@ h1 {
     letter-spacing: 2px;
     color: #252525;
 }
+/* targets the html with id of menu */
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
+}
+/* targets list objects inside menu */
+#menu > li {
+    margin-bottom: 1em;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
+}
+
 /* main content */
 main {
     background-color: lightblue;
