--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,9 @@ header {
     z-index: 99;
     width: 100%;
     box-shadow: 0 2px ;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 /* the a tags inside the header */
 header a {
@@ -58,6 +61,17 @@ nav {
     padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
+    top: 100%;
+}
+/* nav toggle */
+#nav-toggle:checked~nav {
+    display: block;
+}
+#nav-toggle {
+    display: none;
+}
+.nav-toggle-label {
+    font-size: 2rem;
 }
 
 /* main content */
