--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,4 +105,15 @@ footer {
     .nav-toggle-label {
         display: none;
     }
+
+    #logo {
+        font-size: 280%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
+    /* main content */
+    main {
+        /* push main content down to cope with larger header */
+        margin-top: 79px;
+    }
 }
