added hero image and made it responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,10 +76,15 @@ nav {
 
 /* main content */
 main {
-    background-color: lightblue;
     /* makes main element take up enough space to force footer to bottom of website*/
     flex: 1 0 auto;
     margin-top: 47px;
+}
+/* hero section */
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
 }
 /* footer */
 #social-networks {
