--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
-/* Asterisks wild card selector to remind us about overide on browser default */
+/* Asterisk wildcard selector to override default styles added by the browser */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-/* targets body element */
+/* General styles */
 body {
     min-height: 100vh;
     display: flex;
@@ -15,46 +15,48 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-/* h1 tag */
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #252525;
 }
 
-/* header */
+/* Header */
 header {
     background-color: #ffffff;
     padding: 0 1rem;
     position: fixed;
     z-index: 99;
     width: 100%;
-    box-shadow: 0 2px ;
+    box-shadow: 0 2px 2px #3a3a3a;
     display: flex;
     justify-content: space-between;
     align-items: baseline;
 }
-/* the a tags inside the header */
+
 header a {
     text-decoration: none;
     color: inherit;
 }
-/* targets the html with id of menu */
+
 #menu {
     font-size: 110%;
     letter-spacing: 4px;
     list-style-type: none;
 }
-/* targets list objects inside menu */
-#menu > li {
+
+#menu>li {
     margin-bottom: 1em;
 }
 
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
-/* navbar styles with drop down toggled */
+
+/* Navbar styles with dropdown toggle */
 nav {
     position: absolute;
     background-color: #ffffff;
@@ -65,32 +67,38 @@ nav {
     display: none;
     top: 100%;
 }
-/* nav toggle */
+
+/* Nav toggle */
 #nav-toggle:checked~nav {
     display: block;
 }
+
 #nav-toggle {
     display: none;
 }
+
 .nav-toggle-label {
     font-size: 2rem;
 }
 
-/* main content */
+/* Main content */
 main {
-    /* makes main element take up enough space to force footer to bottom of website*/
+    /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
 }
-/* hero section */
+
+/* Hero section */
 #hero {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
     position: relative;
 }
+
 #cover-text {
-    background-color: rgba(241, 109, 107, .7); /* alpha (.7) reminder*/
+    /* Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(241, 109, 107, .7);
     font-size: 130%;
     position: absolute;
     bottom: 30px;
@@ -100,11 +108,39 @@ main {
     padding-left: 10px;
 }
 
-#cover-text > h2, #cover-text > h3 {
+#cover-text>h2,
+#cover-text>h3 {
     color: #ffffff;
 }
 
-/* footer */
+/* Reasons section */
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+
+#reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+
+#benefits-physical>div,
+#benefits-mental>div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#benefits p {
+    padding: 0 20px;
+}
+
+#benefits hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
+
+/* Footer */
 #social-networks {
     text-align: center;
     padding: 20px 0;
@@ -112,28 +148,33 @@ main {
     justify-content: space-evenly;
     list-style-type: none;
 }
+
 #social-networks i {
     font-size: 160%;
     padding: 5%;
     color: #3a3a3a;
 }
-/* supports different screen types */
+
+/* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
-    /* header */
-    nav{
+
+    /* Header */
+    nav {
         display: block;
         position: relative;
         box-shadow: none;
         width: fit-content;
         padding-right: 1rem;
     }
-    /* targets menu for screen types */
+
     #menu {
         display: flex;
     }
-    #menu > li {
+
+    #menu>li {
         padding-left: 1rem;
     }
+
     .nav-toggle-label {
         display: none;
     }
@@ -143,21 +184,23 @@ main {
         line-height: 75px;
         margin: 0 0.5rem;
     }
-    /* main content */
+
+    /* Main content */
     main {
-        /* push main content down to cope with larger header */
+        /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
-    /* hero */
+
+    /* Hero */
     #cover-text {
         width: 300px;
         right: 50px;
-        
     }
 }
-/* */
+
+/* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
-    #menu a:hover{
+    #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
 }
