--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,22 @@ main {
     margin: 5px 0;
 }
 
+#circle-cover-bg {
+    background: url("../images/reasons-image.webp");
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    /* makes into circle*/
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 /* Footer */
 #social-networks {
     text-align: center;
