--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,14 @@ main {
     /* Override the heading colour set in general styles */
     color: #fafafa;
 }
+/* gallery css */
+#photos img {
+    width: 100%;
+    line-height: 1em;
+}
+#photos {
+    line-height: 0;
+}
 
 /* Footer */
 #social-networks {
