made images responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,7 +202,13 @@ main {
     padding: 5%;
     color: #3a3a3a;
 }
-
+/* targets screens that are between 576px and 768px */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
 
@@ -259,12 +265,19 @@ main {
         text-align: end;
         align-self: flex-end;
     }
+    /* Gallery */
+    #photos {
+        column-count: 3;
+    }
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+    }
+    #photos {
+        column-count: 4;
     }
 }
 @media screen and (min-width: 1200px) {
